# cpp-boilerplate-v2

./: CMakeLists.txt  README.md  git-tutorial.md
.github/workflows/: run-unit-test-and-upload-codecov.yml
app/: CMakeLists.txt  main.cpp
cmake-modules/: CodeCoverage.cmake
include/: lib.hpp
libs/: CMakeLists.txt
libs/lib1/: CMakeLists.txt  lib1.hpp  src.cpp
libs/lib2/: CMakeLists.txt  lib2.hpp  src.cpp
scripts/: config-cland.bash  config-clangd.bash
test/: CMakeLists.txt  GMockTest.cpp  GMockTest_v2.cpp  fooBar.cpp  fooBar.hpp  fooBarTest.cpp  fooBarTest_v2.cpp  main.cpp  test.cpp
